labs/networking/manifests/dep-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nginx
  name: test-nginx
  namespace: default
spec:
  containers:
  - image: nginx
    name: test-nginx
    volumeMounts:
    - mountPath: /usr/share/nginx/html/test
      name: test-volume
  volumes:
  - name: test-volume
    emptyDir: {}
