labs/networking/manifests/ingress-nginx-redirect.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: http://example.ir/$1
  name: nginx
  namespace: default
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
        path: /(.*)$
