labs/networking/manifests/ingress-nginx-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  namespace: default
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
        path: /test
  tls:
  - hosts:
    - example.com
    secretName: example-com-tls-secret
