labs/networking/manifests/np-pods.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-db
spec:
  podSelector:
    matchLabels:
      app: mariadb
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: nginx
